# deskbar

./: .hgtags  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.adoc  aclocal.m4  boostrap.sh  config.h  config.h.in  config.status  configure  configure.in  deskbar-config.in  deskbarrc  libdeskbar.pc.in  libtool  mkinstalldirs
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
deskbar/: Makefile  Makefile.am  Makefile.in  desk.c  desk.h  display.c  display.h  lpng.c  lpng.h  main.c  plug.c  plug.h  sig.c  sig.h  xml.c  xml.h
docs/: deskbarrc
docs/www/: api.html  index.html  style.css
libdeskbar/: Makefile  Makefile.am  Makefile.in  htable.c  htable.h  list.c  list.h  log.c  log.h  mem.c  mem.h  plug.h  string.c  string.h  strings.c  strings.h  times.c  times.h
libltdl/: Makefile  config.h  config.status  libtool
plugins/: Makefile  Makefile.am  Makefile.in  battery.c  bmp.c  bmp.la  cpu.c  oom.c  time.c  xmms.c
xml/: config.dtd  config.xml
