# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.5.9)
AC_INIT(deskbar, 0.2, unexist@hilflos.org)
AC_CONFIG_SRCDIR([deskbar/main.c])
AM_INIT_AUTOMAKE(no-define)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# Checks for header files.
AC_PATH_X
AC_PATH_XTRA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([argz.h fcntl.h limits.h malloc.h memory.h stdlib.h string.h strings.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_CLOSEDIR_VOID
AC_REPLACE_FNMATCH
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([gettimeofday memmove memset select strchr strdup strerror strrchr])

AC_CONFIG_SUBDIRS(libltdl)

AM_PROG_LIBTOOL

# Configure switches
AC_ARG_ENABLE(debug, [  --debug	  Compile the debug plugin], debug="$enableval")

# FIXME
prefix="/usr/local"

# Check for X11
if test "x$no_x" = "xyes"; then
  AC_MSG_ERROR([The X Window System libraries and headers are required.])
fi
	
CFLAGS="$CFLAGS $X_CFLAGS"
LIBS="$LIBS $X_LIBS -ldl"
LDFLAGS="$LDFLAGS $LIBS $X_PRE_LIBS"

# Check for functions in X11
AC_CHECK_LIB(X11, XOpenDisplay,
  LIBS="$LIBS -lX11",
  AC_MSG_ERROR([Could not find XOpenDisplay in -lX11.])
)

# Check for libxml support 
PKG_CHECK_MODULES(XML, libxml-2.0 >= 2.6.0,
	CFLAGS="$CFLAGS $XML_CFLAGS"
	LIBS="$LIBS $XML_LIBS",
	AC_MSG_ERROR([The libxml2 library and headers >= 2.6.0 are required.]))

### Plugin check
# Battery
enable_bat=no

AC_CHECK_FILE(/proc/acpi/battery/BAT0/info,
	enable_bat=yes,
	AC_CHECK_FILE(/proc/acpi/battery/BAT1/info,
		enable_bat=yes,
	)
)

if test "x$enable_bat" = "xyes"; then
	AC_DEFINE(HAVE_BAT, 1, [Define to 1 if you have acpi battery support])
fi

AM_CONDITIONAL(HAVE_BAT, test "x$enable_bat" = xyes)

# FIXME: Workaround to check the header (glib)
gliblibs=`glib-config --libs`
glibcflags=`glib-config --cflags`

# FIXME: XMMS
enable_xmms=no

AC_MSG_CHECKING([xmms/xmmsctrl.h usability])

cat<<EOF > conftest.c
	#include <xmms/xmmsctrl.h>

	int
	main (int argc,
				char *argv[])
	{
		return (0);
	}
EOF

${CC} -o conftest conftest.c ${glibcflags} ${gliblibs} >&5 2>&1

if test "$?" != 0; then
	AC_MSG_RESULT(no)
	AC_MSG_WARN([Building without XMMS plugin])
else
	AC_MSG_RESULT(yes)
	enable_xmms=yes
fi

rm -f conftest conftest.c

if test "x$enable_xmms" = "xyes"; then
	AC_DEFINE(HAVE_XMMS, 1, [Define to 1 if you have libxmms support])
fi

AM_CONDITIONAL(HAVE_XMMS, test "x$enable_xmms" = xyes)

# FIXME: BMP
enable_bmp=no

AC_MSG_CHECKING([beep-media-player/bmp/beepctrl.h usability])

cat<<EOF > conftest.c
	#include <beep-media-player/bmp/beepctrl.h>

	int
	main (int argc,
				char *argv[])
	{
		return (0);
	}
EOF

${CC} -o conftest conftest.c ${glibcflags} ${gliblibs} >&5 2>&1

if test "$?" != 0; then
	AC_MSG_RESULT(no)
	AC_MSG_WARN([Building without BMP plugin])
else
	AC_MSG_RESULT(yes)
	enable_bmp=yes
fi

rm -f conftest conftest.c

if test "x$enable_bmp" = "xyes"; then
	AC_DEFINE(HAVE_BMP, 1, [Define to 1 if you have libbmp support])
fi

AM_CONDITIONAL(HAVE_BMP, test "x$enable_bmp" = xyes)

# Debug
enable_debug=no

if test "x$debug" = "xyes"; then
  enable_debug=yes
	AC_DEFINE(HAVE_DEBUG, 1, [Define to 1 if you want debug support])
fi

AM_CONDITIONAL(HAVE_DEBUG, test "x$enable_debug" = xyes)

plugindir=$prefix/lib/$PACKAGE_NAME
AC_DEFINE_UNQUOTED(PLUGIN_DIR, "$plugindir")
AC_SUBST(plugindir)

AC_OUTPUT([
	Makefile
	deskbar-config
	libdeskbar.pc
	libdeskbar/Makefile
	deskbar/Makefile
	plugins/Makefile
	xml/Makefile],
	[chmod +x deskbar-config]
)

echo
echo $PACKAGE_STRING
echo -----------------
echo Plugins:
echo Common Plugins................: Clock CPU Date
echo Battery Plugin................: $enable_bat
echo XMMS Plugin...................: $enable_xmms
echo BMP Plugin....................: $enable_bmp
echo
echo Debugging messages............: $enable_debug
echo
echo The binary will be installed in $prefix/bin,
echo the lib in $prefix/lib and the plugins 
echo in $plugindir.
echo
echo Xml and dtd files will be installed in 
echo $prefix/share.
echo
echo Try 'make' now, good luck!
echo
